[package]
name = "casino-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
warp = "0.3.0"
tracing = "0.1.26"
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0.210"
serde_json = "1.0.128"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.2"
features = ["sqlite", "macros", "chrono", "runtime-tokio", "migrate"]
