[package]
name = "casino-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.1"
warp = "0.3.7"
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40", default-features = false, features = ["log", "std"] }
pretty_env_logger = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
serde = "1.0.210"
serde_json = "1.0.128"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.2"
features = ["sqlite", "macros", "chrono", "runtime-tokio", "migrate"]