[package]
name = "casino-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
warp = "0.3.7"
tokio = { version = "1.41.0", features = ["full"] }
tracing = { version = "0.1.40", default-features = false, features = ["log", "std"] }
pretty_env_logger = "0.5.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
serde = "1.0.213"
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = { version= "0.4.5", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.2"
features = ["postgres", "uuid", "bigdecimal", "macros", "chrono", "runtime-tokio", "migrate"]
